--- a/language/overrides/ru-RU.override.ini
+++ b/language/overrides/ru-RU.override.ini
@@ -1,5 +1,11 @@
+COM_VIRTUEMART_STOCK_QUANTITY="Количество на складе"
+COM_VIRTUEMART_STOCK_LEVEL_DISPLAY_TITLE_TIP="Текущий уровень на складе"
+COM_VIRTUEMART_STOCK_LEVEL_DISPLAY_OUT_TIP="К сожалению, данного товара в настоящее время нет в наличии"
+COM_VIRTUEMART_STOCK_QUANTITY_PRODUCT_IN_STOCK="Имеется %s единиц товара в наличии"
+COM_VIRTUEMART_ADDTOCART_CHOOSE_VARIANT="Выберите цвет для: "
+COM_VIRTUEMART_CATEGORY_BACK_TO="<span class=\"hidden-phone\">Вернуться к: </span>%s"
 IS2019_REGISTRATION_PENDING="<article class=\"main-column\">\n  <header class=\"article-header\">\n    <h1>\n      Подтверждение адреса электронной почты/аккаунта</h1>\n  </header>\n  <div class=\"article-body\">\n    <p>Для подтверждения вашего аккаунта сначала просмотрите папку входящих сообщений на почте, которую вы использовали при регистрации на сайте Империя Шапок, чтобы проверить получили ли вы электронное письмо с подтверждением.</p>\n    <p>Электронное письмо для подтверждения аккаунта содержит\n      <strong>ссылку для подтверждения адреса электронной почты</strong>. Пройдите по ссылке, чтобы подтвердить регистрацию вашего аккаунта.</p>\n    <p>Если вы не получили данное письмо, проверьте папки «Спам» и «Удаленные», так как письмо могло автоматически туда перейти. Также добавьте  admin@imperia-shapok.ru в список разрешенных отправителей, чтобы предотвратить блокирование писем из-за настроек программного обеспечения.</p>\n    <p>Если вы все еще не можете найти письмо для подтверждения вашего аккаунта (после того как убедитесь, что оно не находится в папке “спам”), или у вас возникли трудности в процессе регистрации вашего аккаунта, пожалуйста, отправьте запрос в нашу службу поддержки.</p>\n  </div>\n</article>"
 COM_USERS_REGISTER_NAME_LABEL="Имя (ФИО)"
-COM_USERS_LOGIN_USERNAME_LABEL="Адрес электронной почты"
+COM_USERS_LOGIN_USERNAME_LABEL="Логин или адрес электронной почты"
 COM_USERS_FIELD_RESET_CONFIRM_USERNAME_LABEL="Адрес электронной почты"
 COM_USERS_FIELD_RESET_CONFIRM_USERNAME_DESC="Введите ваш адрес электронной почты"
