language: overrides file updates

--- a/language/overrides/ru-RU.override.ini
+++ b/language/overrides/ru-RU.override.ini
@@ -1,3 +1,18 @@
+IS_COM_VIRTUEMART_ALREADY_MAXEDOUT="Весь запас данного товара уже находится в корзине"
+IS_STOCK_HANDLE_OUT_OFF_STOCK_MESSAGE="Информацию о поступлении на склад можно получить у менеджера."
+IS_COM_VIRTUEMART_MAIL_FOOTER_INFO="В ближайшее время с Вами свяжется менеджер по продажам."
+IS_BT_ADDRESS_SUFFIX="После оформления заказа наш менеджер свяжется с Вами и вышлет счет на Ваш электронный адрес. Отгрузка товара осуществляется в течении 2-х дней после поступления средств на наш расчетный счет."
+IS_COM_VIRTUEMART_EXPLANATION=", чтобы добавить в корзину."
+IS_MINIMUM_ORDER_AMOUNT="Минимальная сумма заказа должна составлять <strong>10000</strong> руб."
+COM_VIRTUEMART_CART_NO_SHIPPING_METHOD_PUBLIC="Приносим наши извинения, но ни один метод отправки не соответствует характеристикам Вашего заказа."
+COM_VIRTUEMART_CART_NO_PAYMENT_METHOD_PUBLIC="Приносим наши извинения, но ни один метод оплаты не соответствует характеристикам Вашего заказа."
+COM_VIRTUEMART_MAIL_SHOPPER_NAME="Приветствуем, %s,"
+COM_VIRTUEMART_OVER_AVAILABLE_AMOUNT_ADDED="Учитывая количество этого товара в Вашей корзине, Вы можете добавить только %s единиц(ы) товара!"
+IS_CONTACT_NAME="Контактное лицо"
+COM_VIRTUEMART_MISSING_VALUE_FOR_FIELD="Отсутствует %s"
+COM_VIRTUEMART_ADDRESS_DELETED="Адрес удален"
+COM_VIRTUEMART_SHOPPER_FORM_ADDRESS_1="Адрес"
+COM_VIRTUEMART_QUESTION_MAIL_FROM="Вопрос был задан %s (%s)"
 COM_VIRTUEMART_STOCK_QUANTITY="Количество на складе"
 COM_VIRTUEMART_STOCK_LEVEL_DISPLAY_TITLE_TIP="Текущий уровень на складе"
 COM_VIRTUEMART_STOCK_LEVEL_DISPLAY_OUT_TIP="К сожалению, данного товара в настоящее время нет в наличии"
@@ -6,6 +21,6 @@ COM_VIRTUEMART_ADDTOCART_CHOOSE_VARIANT="Выберите цвет для: "
 COM_VIRTUEMART_CATEGORY_BACK_TO="<span class=\"hidden-phone\">Вернуться к: </span>%s"
 IS2019_REGISTRATION_PENDING="<article class=\"main-column\">\n  <header class=\"article-header\">\n    <h1>\n      Подтверждение адреса электронной почты/аккаунта</h1>\n  </header>\n  <div class=\"article-body\">\n    <p>Для подтверждения вашего аккаунта сначала просмотрите папку входящих сообщений на почте, которую вы использовали при регистрации на сайте Империя Шапок, чтобы проверить получили ли вы электронное письмо с подтверждением.</p>\n    <p>Электронное письмо для подтверждения аккаунта содержит\n      <strong>ссылку для подтверждения адреса электронной почты</strong>. Пройдите по ссылке, чтобы подтвердить регистрацию вашего аккаунта.</p>\n    <p>Если вы не получили данное письмо, проверьте папки «Спам» и «Удаленные», так как письмо могло автоматически туда перейти. Также добавьте  admin@imperia-shapok.ru в список разрешенных отправителей, чтобы предотвратить блокирование писем из-за настроек программного обеспечения.</p>\n    <p>Если вы все еще не можете найти письмо для подтверждения вашего аккаунта (после того как убедитесь, что оно не находится в папке “спам”), или у вас возникли трудности в процессе регистрации вашего аккаунта, пожалуйста, отправьте запрос в нашу службу поддержки.</p>\n  </div>\n</article>"
 COM_USERS_REGISTER_NAME_LABEL="Имя (ФИО)"
-COM_USERS_LOGIN_USERNAME_LABEL="Логин или адрес электронной почты"
+COM_USERS_LOGIN_USERNAME_LABEL="Адрес электронной почты"
 COM_USERS_FIELD_RESET_CONFIRM_USERNAME_LABEL="Адрес электронной почты"
 COM_USERS_FIELD_RESET_CONFIRM_USERNAME_DESC="Введите ваш адрес электронной почты"
