language: rus overrides

--- a/language/overrides/ru-RU.override.ini
+++ b/language/overrides/ru-RU.override.ini
@@ -1,8 +1,10 @@
+IS_COM_VIRTUEMART_RESULT="Результаты поиска"
+IS_VIRTUEMART_TOTAL_COLORS=".  Всего <strong>%s</strong> цвета(ов)."
 IS_COM_VIRTUEMART_ALREADY_MAXEDOUT="Весь запас данного товара уже находится в корзине"
 IS_STOCK_HANDLE_OUT_OFF_STOCK_MESSAGE="Информацию о поступлении на склад можно получить у менеджера."
 IS_COM_VIRTUEMART_MAIL_FOOTER_INFO="В ближайшее время с Вами свяжется менеджер по продажам."
 IS_BT_ADDRESS_SUFFIX="После оформления заказа наш менеджер свяжется с Вами и вышлет счет на Ваш электронный адрес. Отгрузка товара осуществляется в течении 2-х дней после поступления средств на наш расчетный счет."
-IS_COM_VIRTUEMART_EXPLANATION=", чтобы добавить в корзину."
+IS_COM_VIRTUEMART_EXPLANATION=", чтобы добавить в корзину"
 IS_MINIMUM_ORDER_AMOUNT="Минимальная сумма заказа должна составлять <strong>10000</strong> руб."
 COM_VIRTUEMART_CART_NO_SHIPPING_METHOD_PUBLIC="Приносим наши извинения, но ни один метод отправки не соответствует характеристикам Вашего заказа."
 COM_VIRTUEMART_CART_NO_PAYMENT_METHOD_PUBLIC="Приносим наши извинения, но ни один метод оплаты не соответствует характеристикам Вашего заказа."
