chore(core): Up Joomla 3.9.25 and Gantry 5.4.37

--- a/language/overrides/ru-RU.override.ini
+++ b/language/overrides/ru-RU.override.ini
@@ -1,3 +1,4 @@
+IS_OPTIN_DISCLAIMER=""
 IS2019_LEARN_PRICE="Узнать Цену"
 IS2019_OUR_CATALOG="Наш Каталог"
 IS_COM_VIRTUEMART_RESULT="Результаты поиска"
